fix(back): Remove "Back to " prefix, centralize into back button itself, align using vertial-align instead of margin-top
Summary: Fixes T2135

Test Plan: Run tests

Reviewers: evan

Reviewed By: evan

Maniphest Tasks: T2135

Differential Revision: https://phab.nylas.com/D1731

--- a/internal_packages/message-list/stylesheets/message-list.less
+++ b/internal_packages/message-list/stylesheets/message-list.less
@@ -27,19 +27,6 @@
     opacity: 0;
   }
 
-  .message-nav-title {
-    order:-99;
-    cursor: default;
-    color:@text-color-heading;
-    margin:0;
-    margin-top:11px;
-    font-size: @font-size-h4;
-    font-weight: @font-weight-normal;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-
   .message-toolbar-arrow.down {
     order:101;
     margin-right: 0;
