--- a/static/workspace.less
+++ b/static/workspace.less
@@ -186,6 +186,16 @@ body.is-blurred {
     img.content-mask { background-color: @text-color-heading; }
     flex-grow: 0;
     flex-shrink: 0;
+
+    .item-back-title {
+      cursor: default;
+      color:@text-color-heading;
+      margin:0;
+      font-size: @font-size-h4;
+      font-weight: @font-weight-normal;
+      vertical-align: middle;
+      display:inline-block;
+    }
   }
 
   .btn-toolbar {
@@ -295,4 +305,3 @@ body.platform-win32 {
     cursor:ew-resize;
   }
 }
-
